# main.py
@@ -4,7 +4,7 @@ from flask_sqlalchemy import SQLAlchemy
 from models import db, Audiobook, Category
 from routers.audiobook import audiobook_bp
 from routers.category import category_bp
-# from routers.auth import auth_bp
+from routers.auth import auth_bp
 from flask_swagger_ui import get_swaggerui_blueprint
 from flask_migrate import Migrate
 from flask_restful import Api
@@ -23,7 +23,7 @@ CORS(app)
 
 # Routers setup
 
-# app.register_blueprint(auth_bp, url_prefix='/auth')
+app.register_blueprint(auth_bp, url_prefix='/auth')
 # app.register_blueprint(admin.router, url_prefix='/admin')
 # app.register_blueprint(users.router, url_prefix='/users')
 app.register_blueprint(audiobook_bp, url_prefix='/audiobook')
