# static/swagger.json
@@ -9,6 +9,63 @@
     "basePath": "/",
     "schemes": ["http"],
     "paths": {
+      "/auth/register": {
+      "post": {
+          "tags": [
+              "auth"
+          ],
+          "summary": "Create new user",
+          "description": "Creates new user with given data.",
+          "parameters": [
+              {
+                  "in": "body",
+                  "name": "body",
+                  "description": "User information to create new user",
+                  "required": true,
+                  "schema": {
+                      "$ref": "#/definitions/User"
+                  }
+              }
+          ],
+          "responses": {
+              "201": {
+                  "description": "User was successfully created"
+              }
+          }
+      }
+  },
+  "/auth/token": {
+    "post": {
+      "tags": ["auth"],
+      "summary": "User login",
+      "description": "Endpoint for user authentication.",
+      "consumes": ["application/x-www-form-urlencoded"],
+      "parameters": [
+        {
+          "name": "username",
+          "in": "formData",
+          "required": true,
+          "type": "string"
+        },
+        {
+          "name": "password",
+          "in": "formData",
+          "required": true,
+          "type": "string",
+          "format": "password"
+        }
+      ],
+      "responses": {
+        "200": {
+          "description": "Login successful"
+        },
+        "401": {
+          "description": "Invalid username or password"
+        }
+      }
+    }
+  },
+  
       "/audiobook/": {
         "get": {
           "tags": [
@@ -156,6 +213,28 @@
        
     },
     "definitions": {
+      "User": {
+        "type": "object",
+        "properties": {
+            "id": {
+              "type": "integer",
+              "format": "int64",
+              "readOnly": true
+            },
+            "username": {
+                "type": "string"
+            },
+            "email": {
+                "type": "string"
+            },
+            "password": {
+                "type": "string"
+            },
+            "role": {
+                "type": "string"
+            }
+        }
+    },
       "Audiobook": {
         "type": "object",
         "required": ["title", "description", "category_id"],
